Создана аутентификация и авторизация на стэнде

--- a/sandbox.parent/sandbox.client/front/ts/app/input/login-component.html
+++ b/sandbox.parent/sandbox.client/front/ts/app/input/login-component.html
@@ -27,25 +27,39 @@
             <div class="col-lg-12">
 
               <form *ngIf="!registration">
+
                 <div class="form-group">
                   <input type="text" tabindex="1" class="form-control"
                          placeholder="Имя пользователя"
                          [(ngModel)]="fieldEnterLogin" [ngModelOptions]="{standalone: true}"
-                         (keyup)="updateEnterButton()"
+                         (keyup)="updateEnterButton()" [disabled]="disabled"
                   >
                 </div>
+
                 <div class="form-group">
                   <input type="password" tabindex="2" class="form-control"
                          placeholder="Пароль"
                          [(ngModel)]="fieldEnterPassword" [ngModelOptions]="{standalone: true}"
-                         (keyup)="updateEnterButton()"
+                         (keyup)="updateEnterButton()" [disabled]="disabled"
                   >
 
                 </div>
+
                 <div class="form-group text-center">
                   <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
                   <label for="remember"> Запомни меня!</label>
                 </div>
+
+                <div class="form-group" *ngIf="errorMessage">
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div class="text-center">
+                        <div class="alert alert-danger" role="alert">{{errorMessage}}</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="form-group">
                   <div class="row">
                     <div class="col-sm-6 col-sm-offset-3">
@@ -56,6 +70,7 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="form-group">
                   <div class="row">
                     <div class="col-lg-12">
@@ -66,6 +81,7 @@
                     </div>
                   </div>
                 </div>
+
               </form>
 
 
