--- a/sandbox.parent/sandbox.client/front/ts/app/input/login-component.html
+++ b/sandbox.parent/sandbox.client/front/ts/app/input/login-component.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="form-group">
                   <input type="email" name="email" id="email" tabindex="1" class="form-control"
-                         placeholder="Мыло пользователя" value="">
+                         placeholder="Электронная почта пользователя" value="">
                 </div>
                 <div class="form-group">
                   <input type="password" name="password" id="new_password" tabindex="2" class="form-control"
@@ -106,7 +106,9 @@
                   <div class="row">
                     <div class="col-sm-6 col-sm-offset-3">
                       <input type="submit" name="register-submit" id="register-submit" tabindex="4"
-                             class="form-control btn btn-register" value="Регистрация">
+                             class="form-control btn btn-register" value="Регистрация"
+                             (click)="registrationButtonClicked()"
+                      >
                     </div>
                   </div>
                 </div>
