Настроена сборка и проверена

--- a/sandbox.parent/sandbox.client/front/ts/app/input/login-component.html
+++ b/sandbox.parent/sandbox.client/front/ts/app/input/login-component.html
@@ -76,7 +76,8 @@
                     <div class="col-lg-12">
                       <div class="text-center">
                         <a tabindex="5" class="forgot-password" (click)="forgotPassword()">
-                          Ой, я забыл пароль. Чё делать?</a>
+                          Я не знаю как войти. Чё делать?
+                        </a>
                       </div>
                     </div>
                   </div>
