Настроил вывод null данных

--- a/sandbox.client/front/ts/app/list_of_clients/list-component.html
+++ b/sandbox.client/front/ts/app/list_of_clients/list-component.html
@@ -2,6 +2,6 @@
   <button (click)="exit.emit()">Выход</button>
 </div>
 <div>
-  <button (click)="loadUserInfoButtonClicked()">as</button>
-  {{num}}
+  <button (click)="loadClientInfo()">as</button>
+  {{list[1].fio}}
 </div>
