Empty list warning realized

--- a/sandbox.client/front/ts/app/list_of_clients/list-component.html
+++ b/sandbox.client/front/ts/app/list_of_clients/list-component.html
@@ -23,6 +23,10 @@
     Произошла ошибка при загрузке данных, попробуй обновить страницу
   </div>
 
+  <div *ngIf="emptyList" id="emptyList" class="row text-center">
+    <h2>Список пуст</h2>
+  </div>
+
   <div *ngFor="let entry of list" class="row infoRow">
     <div class="col-xs-3">
       {{entry.fio}}
