--- a/sandbox.client/front/ts/app/main_form/main-form-component.html
+++ b/sandbox.client/front/ts/app/main_form/main-form-component.html
@@ -1,57 +1,16 @@
-<div>
-  <div class="container custom">
-    <div class="panel-body">
+<div class="panel container-fluid">
+  <div class="panel-heading row">
+    <div class="col-lg-11 text-center">
       <h2>Main Form Component</h2>
-      <button class="btn-primary pull-right col-md-2" (click)="exit.emit()">Выход</button>
     </div>
-
-    <div *ngIf="!userInfo">
-      <button [disabled]="!loadUserInfoButtonEnabled" (click)="loadUserInfoButtonClicked()">
-        Загрузить данные пользователя
+    <div class="col-lg-1 text-center">
+      <button class="btn btn-primary btn-default"
+              (click)="exit.emit()">
+        Выход
       </button>
-      <div *ngIf="loadUserInfoError">
-        {{loadUserInfoError}}
-      </div>
-    </div>
-    <div *ngIf="userInfo">
-      <table>
-        <tbody>
-        <tr>
-          <td>ID</td>
-          <td>&nbsp;:&nbsp;</td>
-          <td><b>{{userInfo.id}}</b></td>
-        </tr>
-        <tr>
-          <td>Account name</td>
-          <td>&nbsp;:&nbsp;</td>
-          <td><b>{{userInfo.accountName}}</b></td>
-        </tr>
-        <tr>
-          <td>Surname</td>
-          <td>&nbsp;:&nbsp;</td>
-          <td><b>{{userInfo.surname}}</b></td>
-        </tr>
-        <tr>
-          <td>Name</td>
-          <td>&nbsp;:&nbsp;</td>
-          <td><b>{{userInfo.name}}</b></td>
-        </tr>
-        <tr>
-          <td>Patronymic</td>
-          <td>&nbsp;:&nbsp;</td>
-          <td><b>{{userInfo.patronymic}}</b></td>
-        </tr>
-        <tr>
-          <td>Phone type</td>
-          <td>&nbsp;:&nbsp;</td>
-          <td><b>{{userInfo.phoneType}}</b></td>
-        </tr>
-        </tbody>
-      </table>
     </div>
   </div>
-
-  <div class="container custom">
+  <div class="panel-body">
     <client-list-component></client-list-component>
   </div>
 </div>
