Имплементирована сортировка без фильтрации

--- a/sandbox.client/front/ts/app/client/client-list-component.html
+++ b/sandbox.client/front/ts/app/client/client-list-component.html
@@ -14,46 +14,93 @@
         <th class="col-xs-1 center-all">
           <span class="center-block">Возраст</span>
           <div class="btn-group btn-group-sm">
-            <button class="btn btn-default glyphicon glyphicon-arrow-up" (click)="registration = false"></button>
-            <button class="btn btn-default glyphicon glyphicon-list" (click)="registration = false"></button>
-            <button class="btn btn-default glyphicon glyphicon-arrow-down" (click)="registration = false"></button>
+            <button id="sort-age-ascend"
+                    class="btn btn-default glyphicon glyphicon-arrow-up"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-age-ascend'}"
+                    (click)="onSortingButtonClick('sort-age-ascend', 'AGE', true)">
+            </button>
+            <button id="sort-age-none"
+                    class="btn btn-default glyphicon glyphicon-list"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-age-none'}"
+                    (click)="onSortingButtonClick('sort-age-none', 'NONE', false)">
+            </button>
+            <button id="sort-age-descend"
+                    class="btn btn-default glyphicon glyphicon-arrow-down"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-age-descend'}"
+                    (click)="onSortingButtonClick('sort-age-descend', 'AGE', false)">
+            </button>
           </div>
         </th>
         <th class="col-xs-2 center-all">
           <span class="center-block">Общий остаток счетов</span>
           <div class="btn-group btn-group-sm">
-            <button class="btn btn-default glyphicon glyphicon-arrow-up sort-button-active" (click)="registration = false"></button>
-            <button class="btn btn-default glyphicon glyphicon-list" (click)="registration = false"></button>
-            <button class="btn btn-default glyphicon glyphicon-arrow-down" (click)="registration = false"></button>
+            <button id="sort-total-ascend"
+                    class="btn btn-default glyphicon glyphicon-arrow-up"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-total-ascend'}"
+                    (click)="onSortingButtonClick('sort-total-ascend', 'TOTALACCOUNTBALANCE', true)">
+            </button>
+            <button id="sort-total-none"
+                    class="btn btn-default glyphicon glyphicon-list"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-total-none'}"
+                    (click)="onSortingButtonClick('sort-total-none', 'NONE', false)">
+            </button>
+            <button id="sort-total-descend"
+                    class="btn btn-default glyphicon glyphicon-arrow-down"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-total-descend'}"
+                    (click)="onSortingButtonClick('sort-total-descend', 'TOTALACCOUNTBALANCE', false)">
+            </button>
           </div>
         </th>
         <th class="col-xs-2 center-all">
           <span class="center-block">Максимальный остаток</span>
           <div class="btn-group btn-group-sm">
-            <button class="btn btn-default glyphicon glyphicon-arrow-up" (click)="registration = false"></button>
-            <button class="btn btn-default glyphicon glyphicon-list" (click)="registration = false"></button>
-            <button class="btn btn-default glyphicon glyphicon-arrow-down" (click)="registration = false"></button>
+            <button id="sort-max-ascend"
+                    class="btn btn-default glyphicon glyphicon-arrow-up"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-max-ascend'}"
+                    (click)="onSortingButtonClick('sort-max-ascend', 'MAXACCOUNTBALANCE', true)">
+            </button>
+            <button id="sort-max-none"
+                    class="btn btn-default glyphicon glyphicon-list"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-max-none'}"
+                    (click)="onSortingButtonClick('sort-max-none', 'NONE', true)">
+            </button>
+            <button id="sort-max-descend"
+                    class="btn btn-default glyphicon glyphicon-arrow-down"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-maxтзь-descend'}"
+                    (click)="onSortingButtonClick('sort-max-descend', 'MAXACCOUNTBALANCE', false)">
+            </button>
           </div>
         </th>
         <th class="col-xs-2 center-all">
           <span class="center-block">Минимальный остаток</span>
           <div class="btn-group btn-group-sm">
-            <button class="btn btn-default glyphicon glyphicon-arrow-up" (click)="registration = false"></button>
-            <button class="btn btn-default glyphicon glyphicon-list" (click)="registration = false"></button>
-            <button class="btn btn-default glyphicon glyphicon-arrow-down" (click)="registration = false"></button>
+            <button id="sort-min-ascend"
+                    class="btn btn-default glyphicon glyphicon-arrow-up"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-min-ascend'}"
+                    (click)="onSortingButtonClick('sort-min-ascend', 'MINACCOUNTBALANCE', true)">
+            </button>
+            <button id="sort-min-none"
+                    class="btn btn-default glyphicon glyphicon-list"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-min-none'}"
+                    (click)="onSortingButtonClick('sort-min-none', 'NONE', false)"></button>
+            <button id="sort-min-descend"
+                    class="btn btn-default glyphicon glyphicon-arrow-down"
+                    [ngClass]="{'sort-button-active':activeSortButtonId=='sort-min-descend'}"
+                    (click)="onSortingButtonClick('sort-min-descend', 'MINACCOUNTBALANCE', false)">
+            </button>
           </div>
         </th>
       </tr>
       </thead>
-      <tbody *ngFor="let clientRecord of clientRecords">
-      <tr (click)="clientRecordClicked(clientRecord.id);"
-          [ngClass]="{'bg-success': clientRecord.id == selectedClientRecordId}">
-        <td class="client-record">{{clientRecord.fullName}}</td>
-        <td class="client-record">{{clientRecord.charm}}</td>
-        <td class="client-record">{{clientRecord.age}}</td>
-        <td class="client-record">{{clientRecord.totalAccountBalance}}</td>
-        <td class="client-record">{{clientRecord.maxAccountBalance}}</td>
-        <td class="client-record">{{clientRecord.minAccountBalance}}</td>
+      <tbody *ngFor="let record of records">
+      <tr (click)="onClientRecordButtonClick(record.id);"
+          [ngClass]="{'bg-success': record.id == selectedRecordId}">
+        <td class="client-record">{{record.fullName}}</td>
+        <td class="client-record">{{record.charmName}}</td>
+        <td class="client-record">{{record.age}}</td>
+        <td class="client-record">{{record.totalAccountBalance}}</td>
+        <td class="client-record">{{record.maxAccountBalance}}</td>
+        <td class="client-record">{{record.minAccountBalance}}</td>
       </tr>
       </tbody>
     </table>
@@ -62,19 +109,19 @@
     <div class="btn-group-vertical btn-group-lg">
       <button class="btn btn-success btn-control"
               id="client-list-form-add"
-              (click)="client_record_modal.show(); editClientRecord(null);">
+              (click)="client_record_modal.show(); onClientRecordEditButtonClick(false);">
         +
       </button>
       <button class="btn btn-primary btn-control"
-              [disabled]="selectedClientRecordId == null"
+              [disabled]="selectedRecordId == null"
               id="client-list-form-inspect"
-              (click)="client_record_modal.show(); editClientRecord(selectedClientRecordId)">
+              (click)="client_record_modal.show(); onClientRecordEditButtonClick(true)">
         ...
       </button>
       <button class="btn btn-danger btn-control"
-              [disabled]="selectedClientRecordId == null"
+              [disabled]="selectedRecordId == null"
               id="client-list-form-remove"
-              (click)="removeClientRecord(selectedClientRecordId)">
+              (click)="onClientRecordRemoveButtonClick()">
         -
       </button>
     </div>
@@ -83,9 +130,9 @@
 <div class="text-center">
   <div class="btn-group btn-group-lg">
     <button *ngFor="let pageNum of pageNums"
-       class="btn btn-default"
-       [ngClass]="{'active': pageNum == curPageNum + 1}"
-       (click)="pageNumClicked(pageNum-1)">
+            class="btn btn-default"
+            [ngClass]="{'active': pageNum == curPageNum + 1}"
+            (click)="onPageNumberButtonClick(pageNum-1)">
       {{pageNum}}
     </button>
   </div>
